--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 const b64 = await new Promise(r => { const rd = new FileReader(); rd.onload=()=>r(rd.result.split(',')[1]); rd.readAsDataURL(file.files[0]); });
                 parts.push({inlineData: {data: b64, mimeType: file.files[0].type}});
             }
-            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${key}`, {
+            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=${key}`, {
                 method: "POST", headers: {"Content-Type": "application/json"},
                 body: JSON.stringify({contents: [...conv, {role:"user", parts}]})
             });
