--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>極客遊戲廳 Game Station</title>
+    <title>遊戲廳 Game Station</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"></script>
@@ -303,7 +303,7 @@
                 currentParts.push({inlineData: {data: b64, mimeType: file.files[0].type}});
             }
             // 使用目前的穩定版 1.5-flash 端點
-            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${key}`, {
+            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=${key}`, {
                 method: "POST", headers: {"Content-Type": "application/json"},
                 body: JSON.stringify({contents: [...conv, {role:"user", parts: currentParts}]})
             });
